data/derived/comb/progs/unify/prog2753.ml.out
Characters 40-41:
  List.fold_left f base fs;;
                 ^
Error: This expression has type int -> int
       but an expression was expected of type int -> 'a -> int
       Type int is not compatible with type 'a -> int 
